--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,11 @@
 body {
   padding: 0;
   margin: 0;
+  height: 100%;
+  width: 100vw;
 }
-html, body{
+
+html {
   height: 100%;
   width: 100vw;
 }
